# mistral-cli

./: .gitignore  LANGAGE_NATUREL.md  NOUVELLES_FONCTIONNALITES.md  README.md  example_test_file.py  install.sh  mistral_cli.py  pyproject.toml  requirements.txt  setup.py  test_command_executor.py  test_file_analyzer.py  test_langage_naturel.py
config/: pipelines.json  servers.json
exemple_dossier_test/: app.js  script1.py  script2.py  utils.java
mistral_cli/: __init__.py  cli.py
mistral_cli/tools/csharp/: csharp_doc_generator.py  csharp_linter.py  csharp_test_runner.py
mistral_cli/tools/devops/: docker_linter.py  kubernetes_validator.py  terraform_validator.py
mistral_cli/tools/file_analyzer/: __init__.py  batch_processor.py  command_executor.py  file_reader.py  natural_language_executor.py
mistral_cli/tools/go/: go_doc_generator.py  go_linter.py  go_security_scanner.py  go_test_runner.py
mistral_cli/tools/java/: java_doc_generator.py  java_linter.py  java_security_scanner.py  java_test_runner.py
mistral_cli/tools/javascript/: js_bundler.py  js_linter.py  js_test_runner.py
mistral_cli/tools/kotlin/: kotlin_linter.py  kotlin_test_runner.py
mistral_cli/tools/nodejs/: node_audit.py  node_bundler.py
tools/csharp/: csharp_doc_generator.py  csharp_linter.py  csharp_test_runner.py
tools/devops/: docker_linter.py  kubernetes_validator.py  terraform_validator.py
tools/go/: go_doc_generator.py  go_linter.py  go_security_scanner.py  go_test_runner.py
tools/java/: java_doc_generator.py  java_linter.py  java_security_scanner.py  java_test_runner.py
tools/javascript/: js_bundler.py  js_linter.py  js_test_runner.py
tools/kotlin/: kotlin_linter.py  kotlin_test_runner.py
tools/nodejs/: node_audit.py  node_bundler.py
tools/php/: php_doc_generator.py  php_linter.py  php_security_scanner.py  php_unit_test.py
tools/python/: py_linter.py  py_security_scanner.py
tools/ruby/: ruby_doc_generator.py  ruby_linter.py  ruby_security_scanner.py  ruby_test_runner.py
tools/rust/: rust_doc_generator.py  rust_linter.py  rust_test_runner.py
tools/swift/: swift_linter.py  swift_test_runner.py
(+25 files in other folders)
