[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mistral-cli"
version = "0.1.0"
description = "Outil CLI pour interagir avec Mistral AI"
authors = [
    {name = "Rony Licha", email = "ronylicha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.scripts]
mistral-cli = "mistral_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/ronylicha/mistral-cli"

